2001-08-07 Kevin Vandersloot <kfv101@psu.edu>

	* proctable.c (get_process_nmae): strip the path from the
	arguments string. Now process name show in their full glory.
	(get_info): remove unneeded stuff
	(update_info): update the name just as if icon needs updateing.

	* procactions.c (kill_process): fix spelling of SIGTERM.

	* prettytable.c (...get_name): return NULL if the process does
	not have a .desktop file. 

2001-08-06 Kevin Vandersloot <kfv101@psu.edu>

	* proctable.c (get_process_name): new function to get the name.
	Will try to get name from arguments string.

	* interface.c (popup_menu...): declare them as static functions
	because, well.., that's what they are.

2001-08-06 Kevin Vandersloot <kfv101@psu.edu>

	* Makefile.am: add procactions.c procactions.h

	* procactions.[c,h]: new file to deal with process actions
	like renice and kill

	* callbacks.c (end_process_button...): use the kill function

	* interface.c (popup...kill_process): use the kill function here
	also. Do the warning also if needed.
	
	* procdialogs.c (create_kill_dialog): show the dialog here instead
	of returnin the dialog GtkWidget

	* procdialogs.c (cb_kill..._clicked): use the new kill function.
	(renice_accepted): use the new renice function.
	(create_renice_dialog): change cancel button the close

2001-08-05 Kevin Vandersloot <kfv101@psu.edu>

	Improve the popup menu from patch by Tige Chastain 
	<tigechastain@home.com>

	* interface.c (create_main_window): create the popup menu here
	and save as a global variable. Make the menu nicer.
	(do_popup_menu): rename to avoid conflict with said global
	variable. Now just pop the menu up
	(popup_menu*): place callbacks here and call gtk_popdown_menu
	on the global GtkMenu.

2001-08-05 Kevin Vandersloot <kfv101@psu.edu>

	* procman.c: add new boolean config option to do the delay load
	(procman_get_data): do the delay loading here and honor the
	new config option. Add a timeout to determine if the icons are
	loaded.