@@ -1,5 +1,13 @@
 2001-08-07 Kevin Vandersloot <kfv101@psu.edu>
 
+	* interface.c (create_main_window): hook up to the key press
+	signal for the e-tree
+
+	* callbacks.c (cb_tree_key_press): toggle info tab if 
+	return/enter or space bar is pressed
+
+2001-08-07 Kevin Vandersloot <kfv101@psu.edu>
+
 	* proctable.c (get_process_nmae): strip the path from the
 	arguments string. Now process name show in their full glory.
 	(get_info): remove unneeded stuff
